 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

BUG FIXES

Release 0.15.0 - Unreleased
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4434: Improve auto-parallelism for tez (daijy)

PIG-4495: Better multi-query planning in case of multiple edges (rohini)

PIG-3294: Allow Pig use Hive UDFs (daijy)

PIG-4476: Fix logging in AvroStorage* classes and SchemaTuple class (rdsr via rohini)

PIG-4458: Support UDFs in a FOREACH Before a Merge Join (wattsinabox via daijy)

PIG-4454: Upgrade tez to 0.6.0 (daijy)

PIG-4451: Log partition and predicate filter pushdown information and fix optimizer looping (rohini)

PIG-4430: Pig should support reading log4j.properties file from classpath as well (rdsr via daijy)

PIG-4407: Allow specifying a replication factor for jarcache (jira.shegalov via rohini)

PIG-4401: Add pattern matching to PluckTuple (cheolsoo)

PIG-2692: Make the Pig unit faciliities more generalizable and update javadocs (razsapps via daijy)

PIG-4379: Make RoundRobinPartitioner public (daijy)

PIG-4378: Better way to fix tez local mode test hanging (daijy)

PIG-4358: Add test cases for utf8 chinese in Pig (nmaheshwari via daijy)

PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4519: Correct link to Contribute page (gliptak via daijy)

PIG-4514: pig trunk compilation is broken - VertexManagerPluginContext.reconfigureVertex change (thejas)
