@@ -55,6 +55,17 @@ public class TestPluckTuple {
     }
 
     @Test
+    public void testNegativeStartsWith() throws Exception {
+        String query = "a = load 'a' as (x:int,y:chararray,z:long);" +
+                       "b = load 'b' as (x:int,y:chararray,z:long);" +
+                       "c = join a by x, b by x;" +
+                       "define pluck PluckTuple('a::','false');" +
+                       "d = foreach c generate flatten(pluck(*));";
+        pigServer.registerQuery(query);
+        assertTrue(Schema.equals(pigServer.dumpSchema("b"), pigServer.dumpSchema("d"), false, true));
+    }
+
+    @Test
     public void testPatternMatches() throws Exception {
         String query = "a1 = load 'a1' as (x:int,y:chararray,z:long);" +
                 "a2 = load 'a2' as (x:int,y:chararray,z:long);" +
@@ -63,6 +74,17 @@ public class TestPluckTuple {
                 "c = foreach b generate flatten(pluck(*));";
         pigServer.registerQuery(query);
         assertTrue(Schema.equals(pigServer.dumpSchema("a2"), pigServer.dumpSchema("c"), false, true));
+    }
+
+    @Test
+    public void testNegativePatternMatches() throws Exception {
+        String query = "a1 = load 'a1' as (x:int,y:chararray,z:long);" +
+                "a2 = load 'a2' as (x:int,y:chararray,z:long);" +
+                "b = join a1 by x, a2 by x;" +
+                "define pluck PluckTuple('a[2|3]::.*','false');" +
+                "c = foreach b generate flatten(pluck(*));";
+        pigServer.registerQuery(query);
+        assertTrue(Schema.equals(pigServer.dumpSchema("a1"), pigServer.dumpSchema("c"), false, true));
     }
 
     @Test
@@ -98,4 +120,39 @@ public class TestPluckTuple {
         assertEquals(exp2, it.next());
         assertFalse(it.hasNext());
     }
+
+    @Test
+    public void testNegativeOutput() throws Exception {
+        Data data = resetData(pigServer);
+
+        Tuple exp1 = tuple(1, "sasf", 5L);
+        Tuple exp2 = tuple(2, "woah", 6L);
+
+        data.set("a",
+            Utils.getSchemaFromString("x:int,y:chararray,z:long"),
+            tuple(1, "hey", 2L),
+            tuple(2, "woah", 3L),
+            tuple(3, "c", 4L)
+            );
+        data.set("b",
+            Utils.getSchemaFromString("x:int,y:chararray,z:long"),
+            exp1,
+            exp2,
+            tuple(4, "c", 7L)
+            );
+
+        String query = "a = load 'a' using mock.Storage();" +
+            "b = load 'b' using mock.Storage();" +
+            "c = join a by x, b by x;" +
+            "define pluck PluckTuple('a::','false');" +
+            "d = foreach c generate flatten(pluck(*));";
+        pigServer.registerQuery(query);
+        Iterator<Tuple> it = pigServer.openIterator("d");
+        assertTrue(it.hasNext());
+        assertEquals(exp1, it.next());
+        assertTrue(it.hasNext());
+        assertEquals(exp2, it.next());
+        assertFalse(it.hasNext());
+    }
+
 }
