@@ -32,6 +32,8 @@ INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
 
+PIG-4511: Add columns to prune from PluckTuple (jbabcock)
+
 PIG-4434: Improve auto-parallelism for tez (daijy)
 
 PIG-4495: Better multi-query planning in case of multiple edges (rohini)
